<resources>
    <string name="app_name">Cidade Inteligente</string>
    <string name="smart_city">Cidade Inteligente</string>
    <string name="bemVindo">O Futuro numa aplicação</string>
    <string name="entrar">Entrar</string>
    <string name="notificacoes">Notificações</string>
    <string name="mapa">Mapa</string>
    <string name="apagar_noti">Apagar Notificação</string>
    <string name="atualizar_noti">Atualizar Notificação</string>
    <string name="inserir_noti">Inserir Notificação</string>
    <string name="adicionar">Adicionar</string>
    <string name="inserir">Inserir</string>
    <string name="titulo">Titulo</string>
    <string name="data">Data</string>
    <string name="cidade">Cidade</string>
    <string name="mapsfragment">MapsFragment</string>
    <string name="login">Login</string>
    <string name="adicionar_conta">Adicionar Conta</string>
    <string name="confirmar_password">Confirmar Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="adicionar_registo">Adicionar</string>
    <string name="sem_conta">Não Tem Conta? Registe-se já</string>
    <string name="registar">Registar</string>
    <string name="logout">LogOut</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="pref_file">com.example.preference_file</string>
    <string name="pref_login_status">com.example.preference_login_status</string>
    <string name="pref_user_name">com.example.preference_user_name</string>
    <string name="bem_vindo">Bem-vindo:</string>
    <string name="insert_email">Inserir Email</string>
    <string name="insert_pass">Inserir Password</string>

</resources>
