<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".inserirNotificacao">


    <TextView
        android:id="@+id/tituloNotificacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/notificacoes"
        android:textStyle="bold"
        android:textSize="20dp"


        ></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/tituloNotificacao">

        <EditText
            android:id="@+id/editTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo">

        </EditText>

        <EditText
            android:id="@+id/editData"
            android:hint="@string/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

        </EditText>

        <EditText
            android:id="@+id/editCidade"
            android:hint="@string/cidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">


        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/update"
            android:text="@string/adicionar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

        </Button>


    </LinearLayout>

</RelativeLayout>