<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".Registar">

    <LinearLayout
        android:id="@+id/linearLayoutlogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical" >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/adicionar_conta"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nomeRegisto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="40dp"
            android:autofillHints=""
            android:hint="@string/nome" />

        <EditText
            android:id="@+id/emailRegisto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:autofillHints=""
            android:hint="@string/email" />

        <EditText
            android:id="@+id/passwordRegisto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:hint="@string/password"
            android:autofillHints="" />

        <EditText
            android:id="@+id/passwordConfRegisto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:hint="@string/confirmar_password"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnAdicionar"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="150dp"
            android:layout_marginTop="50dp"
            android:text="@string/registar"
            android:textAlignment="center" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>